Labeled divs in html fixed logo

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 <body>
 <div id = container>
   <div id = logo>
-    <img src = "images/SockExchangePro" alt = "Sock Exchange Logo"/>
+    <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo"/>
   </div>
   <div id = navBar>
+  navbar
+  </div>
   <div class = content>
-    <h1>   </h1>
-    <p>    </p>
+    <h1>Sock Exchange Content   </h1>
+    <p> This is a paragraph.   </p>
   </div>
   <div id = footer>
+  Footer
   </div>
-</div>
+
 </body>
 </html>
