added witdth height to logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div id = container>
   <div id = logo>
-    <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo"/>
+    <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=200 width=600 />
   </div>
   <div id = navBar>
   navbar
