--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   navbar
   </div>
   <div class = content>
-    <h1>Sock Exchange Content   </h1>
+    <h1>A Place for the sock enthusiast  </h1>
     <p> This is a paragraph.   </p>
   </div>
   <div id = footer>
