--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>A Place for the sock enthusiast  </h1>
     <p> This is a paragraph.   </p>
   </div>
-  <div id = footer>
+  <div id = "footer">
   Footer
   </div>
 
