--- a/pages/trade.html
+++ b/pages/trade.html
@@ -15,16 +15,16 @@
       <a href="index.html">Home</a>
     </div>
     <div class = navBarButton>
-      <a href="buy.html">Buy</a>
+      <a href="pages/buy.html">Buy</a>
     </div>
     <div class = navBarButton>
-      <a href="sell.html">Sell</a>
+      <a href="pages/sell.html">Sell</a>
     </div>
     <div class = navBarButton>
-      <a href="trade.html">Trade</a>
+      <a href="pages/trade.html">Trade</a>
     </div>
     <div class = navBarButton>
-      <a href="about.html">About</a>
+      <a href="pages/about.html">About</a>
     </div>
   </div>
   <div class = content>
