fix broken links, fix closing

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 <div id = container>
-  <a href=
   <div id = logo>
     <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=200 width=600 />
   </div>
@@ -15,16 +14,16 @@
       <a href="index.html">Home</a>
     </div>
     <div class = navBarButton>
-      <a href="buy.html">Buy</a>
+      <a href="pages/buy.html">Buy</a>
     </div>
     <div class = navBarButton>
-      <a href="sell.html">Sell</a>
+      <a href="pages/sell.html">Sell</a>
     </div>
     <div class = navBarButton>
-      <a href="trade.html">Trade</a>
+      <a href="pages/trade.html">Trade</a>
     </div>
     <div class = navBarButton>
-      <a href="about.html">About</a>
+      <a href="pages/about.html">About</a>
     </div>
   </div>
   <div class = content>
@@ -34,6 +33,6 @@
   <div id = footer>
   Footer
   </div>
-
+</div>
 </body>
 </html>
