--- a/pages/trade.html
+++ b/pages/trade.html
@@ -12,19 +12,19 @@
   </div>
   <div id = navBar>
     <div class = navBarButton>
-      <a href="index.html">Home</a>
+      <a href="INF-124/index.html">Home</a>
     </div>
     <div class = navBarButton>
-      <a href="pages/buy.html">Buy</a>
+      <a href="buy.html">Buy</a>
     </div>
     <div class = navBarButton>
-      <a href="pages/sell.html">Sell</a>
+      <a href="sell.html">Sell</a>
     </div>
     <div class = navBarButton>
-      <a href="pages/trade.html">Trade</a>
+      <a href="trade.html">Trade</a>
     </div>
     <div class = navBarButton>
-      <a href="pages/about.html">About</a>
+      <a href="about.html">About</a>
     </div>
   </div>
   <div class = content>
@@ -34,6 +34,6 @@
   <div id = footer>
   Footer
   </div>
-
+</div>
 </body>
 </html>
