--- a/pages/buy.html
+++ b/pages/buy.html
@@ -12,7 +12,7 @@
   </div>
   <div id = navBar>
     <div class = navBarButton>
-      <a href="index.html">Home</a>
+      <a href="INF-124/index.htmlindex.html">Home</a>
     </div>
     <div class = navBarButton>
       <a href="buy.html">Buy</a>
@@ -34,6 +34,6 @@
   <div id = footer>
   Footer
   </div>
-
+</div>
 </body>
 </html>
