Fixed bug in html added navbarbutton css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 <div id = container>
-  <a href=
   <div id = logo>
     <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=100 width=220 />
   </div>
@@ -34,6 +33,6 @@
   <div id = "footer">
   Footer
   </div>
-
+</div>
 </body>
 </html>
