Changed Color scheme Made the logo a link Attempted to put links next to Logo

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <div id = container>
+<div id = topbar>
   <div id = logo>
-    <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=100 width=220 />
+    <a href="index.html"><img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=100 width=220 /></a>
   </div>
   <div id = navBar>
     <div class = navBarButton>
@@ -26,6 +27,7 @@
       <a href="pages/about.html">About</a>
     </div>
   </div>
+ </div>
   <div class = content>
     <h1>A Place for the sock enthusiast  </h1>
     <p> This is a paragraph.   </p>
