Centered Footer, Changed Footer Content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p> This is a paragraph.   </p>
   </div>
   <div id = "footer">
-  Footer
+  2015 Sock Exchange Inc.
   </div>
 </div>
 </body>
