Started working on about page.

--- a/pages/about.html
+++ b/pages/about.html
@@ -2,38 +2,40 @@
 <html>
 <head>
 <title>Sock Exchange</title>
-<link rel="stylesheet" type="text/css" href="css/style.css"/>
+<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 </head>
 <body>
 <div id = container>
-  <a href=
+<div id = topbar>
   <div id = logo>
-    <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=200 width=600 />
+    <a href="index.html"><img src = "../images/SockExchangePro.png" alt = "Sock Exchange Logo" height=100 width=220 /></a>
   </div>
   <div id = navBar>
     <div class = navBarButton>
-      <a href="INF-124/index.htmlindex.html">Home</a>
+      <a href="index.html">Home</a>
     </div>
     <div class = navBarButton>
-      <a href="buy.html">Buy</a>
+      <a href="pages/buy.html">Buy</a>
     </div>
     <div class = navBarButton>
-      <a href="sell.html">Sell</a>
+      <a href="pages/sell.html">Sell</a>
     </div>
     <div class = navBarButton>
-      <a href="trade.html">Trade</a>
+      <a href="pages/trade.html">Trade</a>
     </div>
     <div class = navBarButton>
-      <a href="about.html">About</a>
+      <a href="pages/about.html">About</a>
     </div>
   </div>
+ </div>
   <div class = content>
-    <h1>A Place for the sock enthusiast  </h1>
-    <p> This is a paragraph.   </p>
+    <h1>About  </h1>
+    <p> Sock Exchange was developed by Andrew Schlaline and Kyle Vanderworth with the goal of providing an outlet for people to buy, sell, and share their socks with others in a manner that is simple and convenient. </p>
   </div>
-  <div id = footer>
-  Footer
+  <div id = "footer">
+  2015 Sock Exchange Inc.
   </div>
 </div>
 </body>
 </html>
+
