--- a/pages/about.html
+++ b/pages/about.html
@@ -8,23 +8,23 @@
 <div id = container>
 <div id = topbar>
   <div id = logo>
-    <a href="index.html"><img src = "../images/SockExchangePro.png" alt = "Sock Exchange Logo" height=100 width=220 /></a>
+    <a href="../index.html"><img src = "../images/SockExchangePro.png" alt = "Sock Exchange Logo" height=100 width=220 /></a>
   </div>
   <div id = navBar>
     <div class = navBarButton>
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
     </div>
     <div class = navBarButton>
-      <a href="pages/buy.html">Buy</a>
+      <a href="../pages/buy.html">Buy</a>
     </div>
     <div class = navBarButton>
-      <a href="pages/sell.html">Sell</a>
+      <a href="../pages/sell.html">Sell</a>
     </div>
     <div class = navBarButton>
-      <a href="pages/trade.html">Trade</a>
+      <a href="../pages/trade.html">Trade</a>
     </div>
     <div class = navBarButton>
-      <a href="pages/about.html">About</a>
+      <a href="../pages/about.html">About</a>
     </div>
   </div>
  </div>
