Positioning Nav Bar to bottom right of logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div id = logo>
     <a href="index.html"><img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=100 width=220 /></a>
   </div>
+  <div id = navWrapper>
   <div id = navBar>
     <div class = navBarButton>
       <a href="index.html">Home</a>
@@ -26,6 +27,7 @@
     <div class = navBarButton>
       <a href="pages/about.html">About</a>
     </div>
+  </div>
   </div>
  </div>
   <div class = content>
