--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div id = container>
 <div id = topbar>
   <div id = logo>
-    <a href="index.html"><img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=100 width=220 /></a>
+    <a href="index.html"><img src = "images/SockExchangePro_small.png" alt = "Sock Exchange Logo" height=100 width=465 /></a>
   </div>
   <div id = navWrapper>
   <div id = navBar>
