--- a/index.html
+++ b/index.html
@@ -7,27 +7,14 @@
 <body>
 <div id = container>
 <div id = topbar>
-  <div id = logo>
-    <a href="index.html"><img src = "images/SockExchangePro_small.png" alt = "Sock Exchange Logo" height=100 width=465 /></a>
-  </div>
-  <div id = navWrapper>
-  <div id = navBar>
-    <div class = navBarButton>
-      <a href="index.html">Home</a>
+    <div id ="logo">
+        <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=70 width=300 />
     </div>
-    <div class = navBarButton>
-      <a href="pages/buy.html">Buy</a>
+    <div id ="navBar">
+    <div class="wrapper" style="clear: both; padding-top: 25px;">
+        <!--change class for each <a> to nested element-->
+        <a class="edge" href="index.html">Home</a><a href="pages/buy.html">Buy</a><a href="pages/sell.html">Sell</a><a href="pages/trade.html">Trade</a><a href="pages/about.html">About</a>
     </div>
-    <div class = navBarButton>
-      <a href="pages/sell.html">Sell</a>
-    </div>
-    <div class = navBarButton>
-      <a href="pages/trade.html">Trade</a>
-    </div>
-    <div class = navBarButton>
-      <a href="pages/about.html">About</a>
-    </div>
-  </div>
   </div>
  </div>
   <div class = content>
