--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
   </div>
  </div>
   <div class = content>
-    <h1>A Place for the sock enthusiast  </h1>
-    <p> This is a paragraph.   </p>
+    <h1>Welcome to Sock Exchange!  </h1>
+	<p>Sock Exchange is a small company dedicated to providing socks of all kinds.<br>
+	Some of our anticipated features include:</p>
+	<ul>
+		<li>Selling Socks</li>
+		<li>Buying Socks</li>
+		<li>Sharing/Exchanging Socks</li>
+		<li>Sock Discussions</li>
+		<li>And much more!</li>
+	</ul>
+	
   </div>
   <div id = "footer">
   2015 Sock Exchange Inc.
