--- a/trade.html
+++ b/trade.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id = container>
-  <div id = topbar>
+<div id = topbar>
     <div id ="logo">
         <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=70 width=300 />
     </div>
@@ -18,19 +18,11 @@
   </div>
  </div>
   <div class = content>
-    <h1>Welcome to Sock Exchange!  </h1>
-	  <p>Sock Exchange is a small company dedicated to providing socks of all kinds.<br>
-	     Some of our anticipated features include:</p>
-	  <ul>
-		  <li>Selling Socks</li>
-		  <li>Buying Socks</li>
-	  	<li>Sharing/Exchanging Socks</li>
-	  	<li>Sock Discussions</li>
-	  	<li>And much more!</li>
-  	</ul>
+    <h1>A Place for the sock enthusiast to trade socks </h1>
+    <p> This is a paragraph.   </p>
   </div>
   <div id = "footer">
-    2015 Sock Exchange Inc.
+  2015 Sock Exchange Inc.
   </div>
 </div>
 </body>
