Added resized logo and made corresponding change in index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div id = container>
   <div id = topbar>
     <div id ="logo">
-        <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=70 width=300 />
+        <img src = "images/SockExchangePro_small.png" alt = "Sock Exchange Logo" height=70 width=365 />
     </div>
     <div id ="navBar">
     <div class="wrapper" style="clear: both; padding-top: 17px;">
