Very basic feedback form, looks decent.

--- a/feedbackform.html
+++ b/feedbackform.html
@@ -24,7 +24,7 @@
 		<form>
 		<p class="tablerow"><label>Name:</label><input id="name" type="text"></p>
 		<p class="tablerow"><label>Comments?</label><textarea id="Comments" rows="10" cols="30"></textarea></p>
-		<p class="tablerow"><button type="button" onclick="alert('Successfully submitted your feedback!')">Submit Form</button><button type="reset">Reset</button></p>
+		<p class="tablerow"><span class="buttoncell"><button type="button" onclick="alert('Successfully submitted your feedback!')">Submit Form</button><button type="reset">Reset</button></span></p>
 		</form>
   </div>
   <div id = "footer">
