--- a/feedbackform.html
+++ b/feedbackform.html
@@ -1,35 +1,49 @@
 <!-- index.html -->
 <html>
+
 <head>
-<title>Sock Exchange</title>
-<link rel="stylesheet" type="text/css" href="css/style.css"/>
-<link rel="stylesheet" type="text/css" href="css/feedbackForm.css"/>
+  <title>Sock Exchange</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/feedbackForm.css" />
 </head>
+
 <body>
-<div id = container>
-  <div id = topbar>
-    <div id ="logo">
-        <img src = "images/SockExchangePro_small.png" alt = "Sock Exchange Logo" height=70 width=365 />
+  <div id=c ontainer>
+    <div id=t opbar>
+      <div id="logo">
+        <img src="images/SockExchangePro_small.png" alt="Sock Exchange Logo" height=70 width=365 />
+      </div>
+      <div id="navBar">
+        <div class="wrapper" style="clear: both; padding-top: 17px;">
+          <!--change class for each <a> to nested element-->
+          <a class="edge" href="index.html">Home</a><a href="buy.html">Buy</a><a href="sell.html">Sell</a><a href="trade.html">Trade</a><a href="about.html">About</a>
+        </div>
+      </div>
     </div>
-    <div id ="navBar">
-    <div class="wrapper" style="clear: both; padding-top: 17px;">
-        <!--change class for each <a> to nested element-->
-        <a class="edge" href="index.html">Home</a><a href="buy.html">Buy</a><a href="sell.html">Sell</a><a href="trade.html">Trade</a><a href="about.html">About</a>
+    <div class=c ontent>
+      <h1>Feedback Form </h1>
+      <p>In order to give you the best possible service, we ask that you give us feedback on your order:</p>
+      <form>
+        <p class="tablerow">
+          <label>Name:</label>
+          <input id="name" type="text">
+        </p>
+        <p class="tablerow">
+          <label>Comments?</label>
+          <textarea id="Comments" rows="10" cols="30"></textarea>
+        </p>
+        <p class="tablerow">
+          <span class="buttoncell">
+            <button type="button" onclick="alert('Successfully submitted your feedback!')">Submit Form</button>
+            <button type="reset">Reset</button>
+          </span>
+        </p>
+      </form>
+    </div>
+    <div id="footer">
+      2015 Sock Exchange Inc.
     </div>
   </div>
- </div>
-  <div class = content>
-    <h1>Feedback Form  </h1>
-	  <p>In order to give you the best possible service, we ask that you give us feedback on your order:</p>
-		<form>
-		<p class="tablerow"><label>Name:</label><input id="name" type="text"></p>
-		<p class="tablerow"><label>Comments?</label><textarea id="Comments" rows="10" cols="30"></textarea></p>
-		<p class="tablerow"><span class="buttoncell"><button type="button" onclick="alert('Successfully submitted your feedback!')">Submit Form</button><button type="reset">Reset</button></span></p>
-		</form>
-  </div>
-  <div id = "footer">
-    2015 Sock Exchange Inc.
-  </div>
-</div>
 </body>
+
 </html>
