foot sticks to bottom of content, fix markup mistakes

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     </div>
   </div>
  </div>
-  <div class = content>
+  <div class ="content">
     <h1>A Place for the sock enthusiast</h1>
     <p> Socks have evolved over the centuries from the earliest models, which were made from animal skins gathered up and tied around the ankles. In the 8th century BC, the Ancient Greeks wore socks from matted animal hair for warmth. The Romans also wrapped their feet with leather or woven fabrics. By the 5th century AD, socks called "puttees" were worn by holy people in Europe to symbolise purity. By 1000 AD, socks became a symbol of wealth among the nobility. From the 16th century onwards, an ornamental design on the ankle or side of a sock has been called a clock.
 
@@ -25,9 +25,11 @@ The invention of a knitting machine in 1589 meant that socks could be knitted si
 
 The next revolution in sock production was the introduction of nylon in 1938. Until then socks were commonly made from silk, cotton and wool. Nylon was the start of blending two or more yarns in the production of socks, a process that still continues.</p>
   </div>
-  <div id = "footer">
-  2015 Sock Exchange Inc.
-  </div>
 </div>
+  <div id="footer">
+    <div class="wrapFooter">
+      <p>2015 Sock Exchange Inc.</p>
+    </div>
+  </div>
 </body>
 </html>
