--- a/sell.html
+++ b/sell.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-  <div id=c ontainer>
-    <div id=t opbar>
+  <div id="container">
+    <div id="topbar">
       <div id="logo">
         <img src="images/SockExchangePro.png" alt="Sock Exchange Logo" height=70 width=300 />
       </div>
@@ -19,14 +19,16 @@
         </div>
       </div>
     </div>
-    <div class=c ontent>
+    <div class="content">
       <h1>A Place for the sock enthusiast to sell socks </h1>
       <p> This is a paragraph. </p>
     </div>
-    <div id="footer">
-      2015 Sock Exchange Inc.
-    </div>
   </div>
+  <div id="footer">
+    <div class="wrapFooter">
+      <p>2015 Sock Exchange Inc.</p>
+    </div>
+ </div>
 </body>
 
 </html>
