--- a/feedbackform.html
+++ b/feedbackform.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <div id=c ontainer>
-    <div id=t opbar>
+  <div id="container">
+    <div id="topbar">
       <div id="logo">
         <img src="images/SockExchangePro_small.png" alt="Sock Exchange Logo" height=70 width=365 />
       </div>
@@ -20,7 +20,7 @@
         </div>
       </div>
     </div>
-    <div class=c ontent>
+    <div class="content">
       <h1>Feedback Form </h1>
       <p>In order to give you the best possible service, we ask that you give us feedback on your order:</p>
       <form>
@@ -40,10 +40,12 @@
         </p>
       </form>
     </div>
-    <div id="footer">
-      2015 Sock Exchange Inc.
-    </div>
   </div>
+    <div id="footer">
+      <div class="wrapFooter">
+        <p>2015 Sock Exchange Inc.</p>
+      </div>
+    </div>
 </body>
 
 </html>
