--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-  <div id=c ontainer>
-    <div id=t opbar>
+  <div id="container">
+    <div id="topbar">
       <div id="logo">
         <img src="images/SockExchangePro_small.png" alt="Sock Exchange Logo" height=70 width=365 />
       </div>
@@ -19,7 +19,7 @@
         </div>
       </div>
     </div>
-    <div class=c ontent>
+    <div class="content">
       <h1>Welcome to Sock Exchange! </h1>
       <p>Sock Exchange is a small company dedicated to providing socks of all kinds.
         <br> Some of our anticipated features include:</p>
@@ -31,8 +31,10 @@
         <li>And much more!</li>
       </ul>
     </div>
-    <div id="footer">
-      2015 Sock Exchange Inc.
+  </div>
+  <div id="footer">
+    <div class="wrapFooter">
+      <p>2015 Sock Exchange Inc.</p>
     </div>
   </div>
 </body>
