--- a/feedbackform.html
+++ b/feedbackform.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//En"
+  "http://www.w3.org/TR/xhtml/DTD/xhtml-strict.dtd">
 <!-- index.html -->
 <html>
 
@@ -9,17 +11,7 @@
 
 <body>
   <div id="container">
-    <div id="topbar">
-      <div id="logo">
-        <img src="images/SockExchangePro_small.png" alt="Sock Exchange Logo" height=70 width=365 />
-      </div>
-      <div id="navBar">
-        <div class="wrapper" style="clear: both; padding-top: 17px;">
-          <!--change class for each <a> to nested element-->
-          <a class="edge" href="index.html">Home</a><a href="buy.html">Buy</a><a href="sell.html">Sell</a><a href="trade.html">Trade</a><a href="about.html">About</a>
-        </div>
-      </div>
-    </div>
+    <!--#include virtual="common/navBar.html"-->
     <div class="content">
       <h1>Feedback Form </h1>
       <p>In order to give you the best possible service, we ask that you give us feedback on your order:</p>
@@ -27,25 +19,21 @@
         <p class="tablerow">
           <label>Name:</label>
           <input id="name" type="text">
-        </p>
+        </p><!--p class="tablerow">-->
         <p class="tablerow">
           <label>Comments?</label>
           <textarea id="Comments" rows="10" cols="30"></textarea>
-        </p>
+        </p><!--p class="tablerow"-->
         <p class="tablerow">
           <span class="buttoncell">
             <button type="button" onclick="alert('Successfully submitted your feedback!')">Submit Form</button>
             <button type="reset">Reset</button>
-          </span>
-        </p>
+          </span><!--span class="buttoncell"-->
+        </p><!--p class="tablerow"-->
       </form>
-    </div>
-  </div>
-    <div id="footer">
-      <div class="wrapFooter">
-        <p>2015 Sock Exchange Inc.</p>
-      </div>
-    </div>
+    </div><!--div id="content"-->
+  </div><!--div id="container"-->
+  <!--#include virtual="common/footer.html"-->
 </body>
 
 </html>
