--- a/sell.html
+++ b/sell.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//En"
+  "http://www.w3.org/TR/xhtml/DTD/xhtml-strict.dtd">
 <!-- sell.html -->
 <html>
 
@@ -8,27 +10,13 @@
 
 <body>
   <div id="container">
-    <div id="topbar">
-      <div id="logo">
-        <img src="images/SockExchangePro.png" alt="Sock Exchange Logo" height=70 width=300 />
-      </div>
-      <div id="navBar">
-        <div class="wrapper" style="clear: both; padding-top: 17px;">
-          <!--change class for each <a> to nested element-->
-          <a class="edge" href="index.html">Home</a><a href="buy.html">Buy</a><a href="sell.html">Sell</a><a href="trade.html">Trade</a><a href="about.html">About</a>
-        </div>
-      </div>
-    </div>
+    <!--#include virtual="common/navBar.html"-->
     <div class="content">
       <h1>A Place for the sock enthusiast to sell socks </h1>
       <p> This is a paragraph. </p>
-    </div>
-  </div>
-  <div id="footer">
-    <div class="wrapFooter">
-      <p>2015 Sock Exchange Inc.</p>
-    </div>
- </div>
+    </div><!--div id="content"-->
+  </div><!--div id="container"-->
+  <!--#include virtual="common/footer.html"-->
 </body>
 
 </html>
