--- a/about.html
+++ b/about.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//En"
+  "http://www.w3.org/TR/xhtml/DTD/xhtml-strict.dtd">
 <!-- about.html -->
 <html>
 <head>
@@ -5,31 +7,17 @@
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
-<div id = container>
-<div id = topbar>
-    <div id ="logo">
-        <img src = "images/SockExchangePro.png" alt = "Sock Exchange Logo" height=70 width=300 />
-    </div>
-    <div id ="navBar">
-    <div class="wrapper" style="clear: both; padding-top: 17px;">
-        <!--change class for each <a> to nested element-->
-        <a class="edge" href="index.html">Home</a><a href="buy.html">Buy</a><a href="sell.html">Sell</a><a href="trade.html">Trade</a><a href="about.html">About</a>
-    </div>
-  </div>
- </div>
-  <div class ="content">
+  <div id = container>
+  <!--#include virtual="common/navBar.html"-->
+    <div class ="content">
     <h1>A Place for the sock enthusiast</h1>
     <p> Socks have evolved over the centuries from the earliest models, which were made from animal skins gathered up and tied around the ankles. In the 8th century BC, the Ancient Greeks wore socks from matted animal hair for warmth. The Romans also wrapped their feet with leather or woven fabrics. By the 5th century AD, socks called "puttees" were worn by holy people in Europe to symbolise purity. By 1000 AD, socks became a symbol of wealth among the nobility. From the 16th century onwards, an ornamental design on the ankle or side of a sock has been called a clock.
 
-The invention of a knitting machine in 1589 meant that socks could be knitted six times faster than by hand. Nonetheless, knitting machines and hand knitters worked side by side until 1800.
+      The invention of a knitting machine in 1589 meant that socks could be knitted six times faster than by hand. Nonetheless, knitting machines and hand knitters worked side by side until 1800.
 
-The next revolution in sock production was the introduction of nylon in 1938. Until then socks were commonly made from silk, cotton and wool. Nylon was the start of blending two or more yarns in the production of socks, a process that still continues.</p>
-  </div>
-</div>
-  <div id="footer">
-    <div class="wrapFooter">
-      <p>2015 Sock Exchange Inc.</p>
-    </div>
-  </div>
+      The next revolution in sock production was the introduction of nylon in 1938. Until then socks were commonly made from silk, cotton and wool. Nylon was the start of blending two or more yarns in the production of socks, a process that still continues.</p>
+    </div><!--div id="content"-->
+  </div><!--div id="container"-->
+  <!--#include virtual="common/footer.html"-->
 </body>
 </html>
