Added some more things to feedback form

--- a/feedbackform.html
+++ b/feedbackform.html
@@ -20,10 +20,25 @@
           <label>Name:</label>
           <input id="name" type="text">
         </p><!--p class="tablerow">-->
+		<p class="tablerow">
+			<label>Email Address:</label>
+			<input id="Email Address" type="text">
+		</p>
+		<p class="tablerow">
+			<label>Phone Number:</label>
+			<input id="Phone Number" type = "text">
+		</p>
+		<p class = "tablerow">
+			<label>Subject:</label>
+			<input id="Subject" type = "text">
+		</p>
         <p class="tablerow">
           <label>Comments?</label>
           <textarea id="Comments" rows="10" cols="30"></textarea>
         </p><!--p class="tablerow"-->
+		<p class="tablerow">
+			<label>Join our mailing list?</label>
+			<input type="checkbox" name="mail list" value="yes">
         <p class="tablerow">
           <span class="buttoncell">
             <button type="button" onclick="alert('Successfully submitted your feedback!')">Submit Form</button>
