--- a/feedbackform.html
+++ b/feedbackform.html
@@ -38,7 +38,7 @@
         </p><!--p class="tablerow"-->
 		<p class="tablerow">
 			<label>Join our mailing list?</label>
-			<input type="checkbox" name="mail list" value="yes">
+			<input type="checkbox" name="mail list" value="yes" class="cb">
         <p class="tablerow">
           <span class="buttoncell">
             <button type="button" onclick="alert('Successfully submitted your feedback!')">Submit Form</button>
