updated TODO, added a change to feedbackform

--- a/feedbackform.html
+++ b/feedbackform.html
@@ -46,7 +46,7 @@
           </span><!--span class="buttoncell"-->
         </p><!--p class="tablerow"-->
       </form>
-	  <p id="Error" color="red"></p>
+	  <p id="Error"></p>
     </div><!--div id="content"-->
   </div><!--div id="container"-->
   <!--#include virtual="common/footer.html"-->
