--- a/common/navBar.html
+++ b/common/navBar.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//En"
   "http://www.w3.org/TR/xhtml/DTD/xhtml-strict.dtd"><!-- navBar.html -->
-<link rel="stylesheet" type="text/css" href="css/style.css" />
-<link rel="stylesheet" type="text/css" href="css/menustyle.css" />
+<link rel="stylesheet" type="text/css" href="../css/style.css" />
+<link rel="stylesheet" type="text/css" href="../css/menustyle.css" />
 <div id="topbar">
   <div id="logo">
-    <img src="images/SockExchangePro_small.png" alt="Sock Exchange Logo" height=70 width=365 />
+    <img src="../images/SockExchangePro_small.png" alt="Sock Exchange Logo" height=70 width=365 />
   </div>
   <div id="navBar">
     <div class="wrapper" style="clear: both; padding-top: 17px;">
       <!--change class for each <a> to nested element-->
-      <a class="edge" href="index.html">Home</a>
-	  <a href="buy.html">Buy</a>
-	  <a href="sell.html">Sell</a>
-	  <a href="trade.html">Trade</a><a href="about.html">About</a>
+      <li><a href="index.html">Home</a></li>
+	  <li><a href="buy.html">Buy</a>
+	  <div id="m1" onmouseover="show('m1')">
+		<a href="#">Sock Quote</a>
+	  </div>
+	  </li>
+	  <li><a href="sell.html">Sell</a></li>
+	  <li><a href="trade.html">Trade</a></li>
+	  <li><a href="about.html">About</a>
+	  <div id="m2" onmouseover="show('m2')">
+		<a href="#">Feedback</a>
+	  </div>
+	  </li>
     </div>
   </div>
 </div>
