Polished up dropdowns

--- a/common/navBar.html
+++ b/common/navBar.html
@@ -10,10 +10,10 @@
     <div class="wrapper" style="clear: both; padding-top: 17px;">
       <!--change class for each <a> to nested element-->
 	  <ul class = "Links">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html" class="edge">Home</a></li>
 	  <li><a href="buy.html" onmouseover="show('m1')">Buy</a>
 	  <div id="m1" onmouseover="show('m1')">
-		<a href="#">Sock Quote</a>
+		<a href="#">SockQuote</a>
 	  </div>
 	  </li>
 	  <li><a href="sell.html">Sell</a></li>
