orderForm.html, validate credit card

--- a/buy.html
+++ b/buy.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/buy.css" />
   <script type="text/javascript" src="scripts/sockQuote.js"></script>
   <script type="text/javascript" src="scripts/rotatingSockImages.js"></script>
+  <script type="text/javascript" src="scripts/Validation.js"></script>
 </head>
 
 <body onLoad='getRotatingSockImages()'>
@@ -32,7 +33,7 @@
           </div><!--div class="inputBit"-->
           <div class="inputBit">
             <label for="sockPattern">Please select from one of our sock patterns</label>
-            <select name='sockPattern' id="sockPattern" onChange="" />
+            <select name='sockPattern' id="sockPattern"/>
               <option value="argyle">Argyle</option>
               <option value="checkered">Checkered</option>
               <option value="striped">Striped</option>
